# miniDL

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: COMMIT_CONVENTION.md
include/: basicTypes.h  shape.h
include/core/: tensor.h  tensorImpl.h  tensorOptions.h
include/data/: dataloader.h  dataset.h  text_dataset.h
include/memory/: allocator.h  memoryPool.h  storage.h
include/miniDL/: basicTypes.h  scalar.h  shape.h
include/nn/: activation.h  embedding.h  layernorm.h  linear.h  loss.h  module.h  multihead_attention.h  transformer_block.h
include/ops/: factory.h  operator.h
include/ops/activation/: gelu.h  relu.h  softmax.h
include/ops/cuda/: fill_cuda.cuh
include/ops/cuda/activation/: gelu_cuda.cuh  relu_cuda.cuh  softmax_cuda.cuh
include/ops/cuda/loss/: cross_entropy_cuda.cuh  mse_cuda.cuh
include/ops/cuda/math/: add_cuda.cuh  bmm_cuda.cuh  matmul_cuda.cuh  mul_cuda.cuh
include/ops/cuda/memory/: contiguous_cuda.cuh
include/ops/cuda/nn/: causal_mask_cuda.cuh  embedding_cuda.cuh
include/ops/cuda/norm/: layernorm_cuda.cuh
include/ops/cuda/optim/: adamw_cuda.cuh  sgd_cuda.cuh
include/ops/cuda/shape/: broadcast_cuda.cuh  transpose_cuda.cuh
include/ops/loss/: cross_entropy.h  mse.h
include/ops/math/: add.h  bmm.h  matmul.h  mul.h
include/ops/memory/: contiguous.h
include/ops/nn/: causal_mask.h  embedding.h
include/ops/norm/: layernorm.h
include/ops/shape/: broadcast.h  permute.h  reshape.h  transpose.h
include/optim/: adamw.h  optimizer.h  sgd.h
include/utils/: branchPrediction.h  exception.h  log.h
scripts/: build_and_run_example.sh  build_and_test.sh
src/core/: tensor.cpp  tensorImpl.cpp
src/data/: dataloader.cpp
src/memory/: allocator.cpp  memoryPool.cpp  storage.cpp
src/nn/: linear.cpp
src/ops/: factory.cpp
src/ops/activation/: gelu.cpp  relu.cpp  softmax.cpp
src/ops/cuda/: fill_cuda.cu
src/ops/cuda/activation/: gelu.cu  relu.cu  softmax.cu
src/ops/cuda/loss/: cross_entropy_cuda.cu  mse_cuda.cu
src/ops/cuda/math/: add_cuda.cu  bmm_cuda.cu  matmul_cuda.cu  mul_cuda.cu
src/ops/cuda/memory/: contiguous_cuda.cu
src/ops/cuda/nn/: causal_mask_cuda.cu  embedding_cuda.cu
src/ops/cuda/norm/: layernorm_cuda.cu
src/ops/cuda/optim/: adamw_cuda.cu  sgd_cuda.cu
src/ops/cuda/shape/: broadcast_cuda.cu  transpose_cuda.cu
src/ops/loss/: cross_entropy.cpp  mse.cpp
src/ops/math/: add.cpp  bmm.cpp  matmul.cpp  mul.cpp
src/ops/memory/: contiguous.cpp
src/ops/nn/: causal_mask.cpp  embedding.cpp
src/ops/norm/: layernorm.cpp
src/ops/shape/: broadcast.cpp  permute.cpp  reshape.cpp  transpose.cpp
src/optim/: adamw.cpp  sgd.cpp
tests/: CMakeLists.txt
tests/example/: CMakeLists.txt  train_linear.cpp  train_transformer.cpp
tests/unit/: CMakeLists.txt
tests/unit/core/: test_autograd.cpp
tests/unit/memory/: test_memory.cpp
tests/unit/nn/: test_embedding.cpp  test_layernorm.cpp  test_linear.cpp
tests/unit/ops/: test_activation.cpp  test_add.cpp  test_bmm.cpp  test_broadcast.cpp  test_matmul.cpp  test_mse.cpp  test_random.cpp  test_shape_related.cpp
tests/unit/optim/: test_sgd.cpp
tests/unit/utils/: test_shape.cpp  test_tensor.cpp
